update todo/fix vertical overflow on dashboard

--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -190,6 +190,8 @@
   align-items: center;
   flex-direction: column;
   width: 280px;
+  overflow-y: auto;
+  padding: 2rem 0;
   transition: 0.1s linear;
   color: rgb(145, 145, 145);
 
@@ -223,7 +225,7 @@
     }
   }
 
-  @media screen and (max-height: 700px) {
+  @media screen and (max-height: 870px) {
     min-height: 100px;
     margin-bottom: 15px;
   }
@@ -330,16 +332,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex: 2;
+  padding: 3rem 0 0.2rem;
 
   img {
     max-width: 120px;
     object-fit: cover;
     border-radius: 10px;
-  }
-
-  @media screen and (max-height: 820px) {
-    display: none;
   }
 }
 
